Analise de Dados em Panda

--- a/dados/01_jupyter/jupyter.ipynb
+++ b/dados/01_jupyter/jupyter.ipynb
@@ -55,20 +55,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2ab0af9e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Olá Mundo 🤷‍♂️🐍🤷‍♂️\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Olá Mundo 🤷‍♂️🐍🤷‍♂️\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93ee9530",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texto = \"Este é um texto - teste\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5068121a",
+   "metadata": {},
+   "source": [
+    "Markdown representando um texto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24aecfac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(texto)"
    ]
   }
  ],
